# fastapi

./: app.py  fastapi_ml_model.ipynb  frontend.py  main.py  main_old.py  patients.json  pyproject.toml  requirements.txt
insurance_premium_prediction/: Dockerfile  app.py
insurance_premium_prediction/config/: city_tier.py
insurance_premium_prediction/model/: model.pkl  predict.py
insurance_premium_prediction/schema/: prediction_response.py  user_input.py
